--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ Pillow==9.5.0
 psycopg2==2.9.6
 pycparser==2.21
 PyJWT==2.7.0
+python-decouple==3.8
 python3-openid==3.2.0
 requests==2.30.0
 requests-oauthlib==1.3.1
