updating templates setting.py

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,12 @@
 {
     "cSpell.words": [
         "abent",
+        "allauth",
+        "emailaddress",
+        "googleauthentication",
+        "HNKMSMEOTCAPP",
         "Projectvote",
-        "shopproducts"
+        "shopproducts",
+        "SOCIALACCOUNT"
     ]
 }
