updates on pages , notification, new class created etc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "abent",
         "allauth",
         "emailaddress",
+        "endfor",
         "googleauthentication",
         "HNKMSMEOTCAPP",
         "Projectvote",
